logs/Slang/chapter-5/5.8-time-literals.sv.log
name: time-literals
description: Examples of time literals
should_fail: 0
tags: 5.8
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.8-time-literals.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.8-time-literals.sv:14:9: error: language feature not yet supported
    a = 1fs;
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.8-time-literals.sv:15:9: error: language feature not yet supported
    a = 1ps;
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.8-time-literals.sv:16:9: error: language feature not yet supported
    a = 1ns;
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.8-time-literals.sv:17:9: error: language feature not yet supported
    a = 1us;
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.8-time-literals.sv:18:9: error: language feature not yet supported
    a = 1ms;
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.8-time-literals.sv:19:9: error: language feature not yet supported
    a = 1s;
        ^~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.8-time-literals.sv:22:9: error: language feature not yet supported
    a = 2.1ms;
        ^~~~~
